--- a/grayarea/comic/css/style.css
+++ b/grayarea/comic/css/style.css
@@ -1,3 +1,10 @@
+
+.container {
+  border: 1px solid #999;
+  padding: 8px;
+  width: fit-content;
+}
+
 #cell0 {
   width: 400px;
   height: 400px;
@@ -6,7 +13,7 @@
   display: inline-block;
 }
 
-#cell0, #cont1 {
+#cell0, #cell1 {
   margin-right: 4px;
 }
 
