--- a/grayarea/comic/css/style.css
+++ b/grayarea/comic/css/style.css
@@ -1,8 +1,17 @@
 
+body {
+  background-color: #ebebeb;
+}
+
 .container {
-  border: 1px solid #999;
   padding: 8px;
   width: fit-content;
+  box-shadow: 3px 3px 6px rgba(0,0,0,.25);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
 }
 
 #cell0 {
