--- a/grayarea/comic/css/style.css
+++ b/grayarea/comic/css/style.css
@@ -320,10 +320,6 @@ div#line-133 { animation-delay: 6.65s; top: 399px }
 .css-square {
   box-sizing: border-box;
   position: absolute;
-  /* border: 1px solid white;
-  background-color: rgb(80,25,190); */
-  /* border: 1px solid white; */
-  /* opacity: .05; */
   border: 1px solid rgb(80,25,190);
   background: none;
   opacity: .05;
@@ -694,8 +690,8 @@ div#line-133 { animation-delay: 6.65s; top: 399px }
 }
 
 @keyframes animo3 {
-  0% { opacity: .5; border-color: #aa00ff; border-radius: 50%;}
-  100% { opacity: 1; border-color: #00caff; border-radius: 0%;}
+  0% { opacity: .5; border-color: #aa00ff;}
+  100% { opacity: 1; border-color: #00caff; height: 16px;}
 }
 
 #cell2 {
@@ -711,9 +707,8 @@ div#line-133 { animation-delay: 6.65s; top: 399px }
 }
 
 .row div {
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
+  width: 12px;
+  height: 2px;
   box-sizing: border-box;
   background-color: none;
   border: 1px solid #aa00ff;
